// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Topbar JavascriptMethods renders 1`] = `
<Fragment>
  <h2
    id="javascript-methods"
  >
    JavaScript Methods
  </h2>
  <JavascriptDocs
    close={true}
    componentName="topbar"
    open={true}
  />
</Fragment>
`;

exports[`Components: Topbar Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    To use a topbar the bare minimum markup required is:
  </p>
  <ul>
    <li>
      <CodeTags
        code=".topbar"
        type="secondary"
      />
       wrapper.
    </li>
    <li>
      Anchor with class 
      <CodeTags
        code=".topbar-logo"
        type="secondary"
      />
       to display the logo and make it clickable.
    </li>
  </ul>
  <p>
    With this you get a topbar with the Swedbank Pay logo. In the topbar you can add additional functionality like a menu containing links. To enable this add a 
    <CodeTags
      code="<button>"
      type="primary"
    />
     and a 
    <CodeTags
      code="<nav>"
      type="primary"
    />
     containing anchors. Remember to include 
    <CodeTags
      code="toggle-nav=\\"{your_nav_id}\\""
      type="secondary"
    />
     as a 
    <CodeTags
      code="<button>"
      type="primary"
    />
     attribute to get the menu to appear when the menu-button is clicked.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Topbar
      id="demo-topbar"
      logout={true}
      topbarContent={
        Object {
          "btn": Object {
            "icon": "menu",
            "name": "Menu",
          },
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Topbar TopbarPNG renders 1`] = `
<Fragment>
  <h2
    id="topbar-png"
  >
    Topbar with PNG logo
  </h2>
  <p>
    A PNG version of the logo can also be used. This is done by appending the class 
    <CodeTags
      code=".topbar-logo-png"
      type="secondary"
    />
     to the anchor with class 
    <CodeTags
      code=".topbar-logo"
      type="secondary"
    />
    . Only consider using the PNG version when there are issues with using the SVG version.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Topbar
      id="demo-topbar-png"
      logout={true}
      png={true}
      topbarContent={
        Object {
          "btn": Object {
            "icon": "menu",
            "name": "Menu",
          },
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
    />
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Topbar
      id="demo-topbar-1-png"
      logout={true}
      png={true}
      topbarContent={
        Object {
          "btn": Object {
            "icon": "menu",
            "name": "Menu",
          },
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
      wide="xl"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Topbar TopbarSticky renders 1`] = `
<Fragment>
  <h2
    id="topbar-sticky"
  >
    Sticky topbar
  </h2>
  <p>
    A sticky topbar is also available, with class 
    <CodeTags
      code=".topbar-sticky"
      type="secondary"
    />
    . Use 
    <CodeTags
      code=".topbar-min-{breakpoint}-sticky"
      type="secondary"
    />
     to specify the minimum width the topbar should be sticky, or 
    <CodeTags
      code=".topbar-max-{breakpoint}-sticky"
      type="secondary"
    />
     to specify the maximum width the topbar should be sticky (see 
    <Link
      to="/docs/core/breakpoints"
    >
      breakpoints
    </Link>
     for more information on breakpoints). Note that the sticky topbar does not work in Internet Explorer 11.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="container-fluid"
    >
      <Topbar
        id="demo-topbar-sticky"
        logout={true}
        sticky={true}
        topbarContent={
          Object {
            "btn": Object {
              "icon": "menu",
              "name": "Menu",
            },
            "items": Array [
              Object {
                "icon": "home",
                "name": "Home",
              },
              Object {
                "icon": "shopping_cart",
                "name": "Purchase history",
              },
              Object {
                "icon": "settings",
                "name": "Settings",
              },
            ],
          }
        }
        wide="xl"
      />
      <div
        className="row"
      >
        <div
          className="col-auto"
        >
          <Sidebar
            id="dg-sidebar"
            sidebarNavList={
              Array [
                Object {
                  "lastParent": true,
                  "subList": Array [
                    Object {
                      "title": "Introduction 1",
                    },
                    Object {
                      "title": "Introduction 2",
                    },
                    Object {
                      "title": "Introduction 3",
                    },
                  ],
                  "title": "Introduction",
                },
                Object {
                  "lastParent": true,
                  "subList": Array [
                    Object {
                      "title": "Summary chapter 1",
                    },
                    Object {
                      "title": "Summary chapter 2",
                    },
                    Object {
                      "title": "Summary chapter 3",
                    },
                  ],
                  "title": "Summary",
                },
                Object {
                  "lastParent": false,
                  "subList": Array [
                    Object {
                      "lastParent": true,
                      "subList": Array [
                        Object {
                          "title": "Operations",
                        },
                        Object {
                          "title": "Lorem ipsum",
                        },
                        Object {
                          "title": "Dolor sit amet consectetur",
                        },
                        Object {
                          "title": "Adipiscing elit",
                        },
                      ],
                      "title": "Operations",
                    },
                    Object {
                      "lastParent": true,
                      "subList": Array [
                        Object {
                          "title": "Event 1",
                        },
                        Object {
                          "title": "Event 2",
                        },
                        Object {
                          "title": "Event 3",
                        },
                      ],
                      "title": "Events",
                    },
                    Object {
                      "lastParent": false,
                      "subList": Array [
                        Object {
                          "lastParent": true,
                          "subList": Array [
                            Object {
                              "title": "Event 1",
                            },
                            Object {
                              "title": "Event 2",
                            },
                            Object {
                              "title": "Event 3",
                            },
                          ],
                          "title": "Events",
                        },
                        Object {
                          "lastParent": true,
                          "subList": Array [
                            Object {
                              "title": "Operations",
                            },
                            Object {
                              "title": "Lorem ipsum",
                            },
                            Object {
                              "title": "Dolor sit amet consectetur",
                            },
                            Object {
                              "title": "Adipiscing elit",
                            },
                          ],
                          "title": "Operations",
                        },
                      ],
                      "title": "Extras",
                    },
                  ],
                  "title": "Other features",
                },
              ]
            }
            sticky={true}
          />
        </div>
        <main
          className="col main-content border-left"
        >
          Main content things...
        </main>
      </div>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Topbar TopbarWide renders 1`] = `
<Fragment>
  <h2
    id="topbar-wide"
  >
    Wide topbar
  </h2>
  <p>
    This is a wide topbar.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Topbar
      id="demo-topbar-1"
      logout={true}
      topbarContent={
        Object {
          "btn": Object {
            "icon": "menu",
            "name": "Menu",
          },
          "items": Array [
            Object {
              "icon": "home",
              "name": "Home",
            },
            Object {
              "icon": "shopping_cart",
              "name": "Purchase history",
            },
            Object {
              "icon": "settings",
              "name": "Settings",
            },
          ],
        }
      }
      wide="xl"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Topbar renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    The topbar is used to give users an easily available navigational bar at the top of your web application.
  </p>
  <Overview />
  <TopbarWide />
  <TopbarSticky />
  <TopbarPNG />
  <JavascriptMethods />
</DocContainer>
`;
